[package]
name = "h120"
version = "0.1.0"
edition = "2024"
description = "Reference implementation of the ITU-T H.120 video codec (clause 1, 1984)"
license = "MIT"

[features]
default = ["player"]
player = ["dep:gtk4", "dep:libadwaita"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gtk4 = { version = "0.9", features = ["v4_14"], optional = true }
libadwaita = { version = "0.7", features = ["v1_5"], optional = true }

# Encoder/decoder CLI, with no graphical dependency whatsoever.
[[bin]]
name = "h120"
path = "src/main.rs"

# Separate graphical player (GTK4 + libadwaita).
[[bin]]
name = "h120-play"
path = "src/bin/h120-play.rs"
required-features = ["player"]

[profile.release]
lto = true
